# slatus

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: config.rs  main.rs  slack.rs  storage.rs
