[package]
name = "slatus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minreq = { version = "2", features = ["https-native", "json-using-serde"] }
directories = "5"
anyhow = "1"
